<resources>
    <string name="app_name">Pengolahan Citra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fail_to_create_image">Failed to create image file</string>
    <string name="camera_permission_not_granted">CAMERA permission has NOT been granted. Requesting permission.</string>
    <string name="taking_a_picture">Take a picture! button pressed. Checking permission.</string>
    <string name="no_activity_available_to_resolve_intent">No activity available to resolve intent</string>
    <string name="select_picture">Select Picture</string>
    <string name="select_or_capture_image">Please Select or Capture an Image</string>
    <string name="file_not_found_for_image_uri">File not found for image uri</string>
    <string name="ask_to_select_or_capture_an_image">Please Select or Capture an Image</string>
    <string name="grayscale_histogram_title">Grayscale Histogram</string>
    <string name="blue_histogram_title">Blue Histogram</string>
    <string name="green_histogram_title">Green Histogram</string>
    <string name="red_histogram_title">Red Histogram</string>
    <string name="action_camera">Take a picture</string>
    <string name="action_select_picture">Select a picture</string>
    <string name="action_show_histogram">Show histogram</string>
    <string name="action_contrast_enhancement">Constrast Enhancement</string>
    <string name="generate_image">Generate Image</string>
    <string name="enhancement_result_image">Enhancement Result Image</string>
    <string name="enchancement_original_image">Original Image</string>
    <string name="weight">Weight</string>
    <string name="histogram_specification">Histogram Specification</string>
    <string name="generate_equalized_image">Generate Equalized Image</string>
    <string name="generate_histogram_specification_image">Generate Histogram Specification Image</string>
    <string name="referenced_histogram_title">Referenced Histogram</string>
    <string name="ocr_text">OCR</string>
    <string name="generate_digit">Generate Digit</string>
    <string name="result">Result:</string>
    <string name="action_ocr">OCR</string>
    <string name="action_train_ocr">Train OCR</string>
    <string name="ocr_label_prompt_text_view">Type The Label:</string>
    <string name="ocr_label_prompt_edit_text_hint">Label</string>
    <string name="action_skeletonize_image">Skeletonize Image + OCR</string>
    <string name="skeletonize_image">Skeletonize Image</string>
    <string name="_0">0</string>
    <string name="_255">255</string>

    <string name="load_image_fr_tv_text">Please take or load an image first</string>
    <string name="load_image_fr_btn_take_image_text">Take an Image</string>
    <string name="load_image_fr_btn_load_image_text">Load Image</string>
    <string name="load_image_fr_btn_save_image_text">Save Image</string>
    <string name="load_image_fr_btn_generate_text">Generate Image</string>
    <string name="contrast_enhancement_fr_btn_process_text">Process Image</string>
    <string name="contrast_enhancement_fr_btn_commit_text">Commit Changes</string>
    <string name="ocr_fr_btn_process_text">Skeletonize and Predict</string>

    <string-array name="contrast_enhancement_method">
        <item>Linear Stretching</item>
        <item>Histogram Equalization</item>
        <item>Logarithmic Transformation</item>
        <item>Power Law</item>
        <item>Negative</item>
    </string-array>
</resources>
