<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera_alt_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_camera"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_picture"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_select_picture"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_show_histogram"
        android:icon="@drawable/ic_histogram"
        android:orderInCategory="100"
        android:title="@string/action_show_histogram"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_constrast_enhancement"
        android:icon="@drawable/ic_photo_filter_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_contrast_enhancement"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_histogram_spesification"
        android:icon="@drawable/ic_histogram"
        android:orderInCategory="100"
        android:title="@string/histogram_specification"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_ocr"
        android:icon="@drawable/ic_closed_caption"
        android:orderInCategory="100"
        android:title="@string/ocr_text"
        app:showAsAction="always"
        />
</menu>