<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".image_skeletonization.OCRFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ocr_fr_iv_orig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:minHeight="200dp"
                android:minWidth="150dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/ocr_fr_tv_load_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ocr_fr_iv_orig"
                android:layout_centerHorizontal="true"
                android:text="@string/load_image_fr_tv_text" />

            <SeekBar
                android:id="@+id/ocr_fr_seekbar"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ocr_fr_iv_orig"
                android:layout_centerHorizontal="true"
                android:max="255"
                android:progress="127" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ocr_fr_seekbar"
                android:layout_below="@id/ocr_fr_iv_orig"
                android:text="@string/_0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/ocr_fr_seekbar"
                android:layout_below="@id/ocr_fr_iv_orig"
                android:text="@string/_255" />

            <EditText
                android:id="@+id/ocr_fr_edittext_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ocr_fr_seekbar"
                android:layout_toStartOf="@+id/ocr_fr_tv_result"
                android:text="12" />

            <EditText
                android:id="@+id/ocr_fr_edittext_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ocr_fr_seekbar"
                android:layout_toEndOf="@+id/ocr_fr_edittext_distance"
                android:text="50" />

            <Button
                android:id="@+id/ocr_fr_btn_process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ocr_fr_edittext_distance"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:text="@string/ocr_fr_btn_process_text" />

            <ImageView
                android:id="@+id/ocr_fr_iv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ocr_fr_btn_process"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:minHeight="200dp"
                android:minWidth="150dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/ocr_fr_tv_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ocr_fr_iv_result"
                android:layout_centerHorizontal="true"
                android:text="@string/result" />

            <TextView
                android:id="@+id/ocr_fr_tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ocr_fr_tv_result_title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:textSize="32sp" />

            <Button
                android:id="@+id/ocr_fr_btn_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ocr_fr_tv_result"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:text="@string/contrast_enhancement_fr_btn_commit_text"
                android:visibility="gone" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>